# Palko_Demo_v2

./: .gitignore  Demo.py  Dummy_Server.py  README.md  car_client.py  car_sender.py  city_demo_all_paths_tuple.pkl  dummy_drone_sender.py  pyproject.toml  run_scripts.py  simulator.py  skyc_inspector.py
Client/: Client.py
car/: 0  1  2  3  4
motioncapture/: motioncapture-1.0a1-cp310-cp310-linux_x86_64.whl
path_planning_and_obstacle_avoidance/: Animation_handler.py  Classes.py  Scene_construction.py  Trajectory_planning.py
path_planning_and_obstacle_avoidance/Pickle_saves/Construction_saves/: base_graph.pickle  densed_graph.pickle  obstacle_measurement.pickle  static_obstacles.pickle
path_planning_and_obstacle_avoidance/Util_files/: Util_constuction.py  Util_general.py  Util_trajectory_planning.py  Util_visualization.py
