[tool.poetry]
name = "palko-demo-v2"
version = "0.1.0"
description = ""
authors = ["AIMotionLab <aimotionlab.sztaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
trio = "^0.22.0"
motioncapture = { file = "./motioncapture/motioncapture-1.0a1-cp310-cp310-linux_x86_64.whl"}
matplotlib = "^3.6.2"
scipy = "^1.9.2"
gurobipy = "^10.0.1"
networkx = "^3.1"
stl = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
